fix: header spacing adjustment

--- a/style/style.css
+++ b/style/style.css
@@ -14,11 +14,19 @@ body{
     background-color: #FFB30D;
     /* max-width: 800px; */
     max-width: 1126px;
-    margin: auto;
+    /* margin: auto; */
+    margin-right: 100px;
+    margin-left: 78px;
+
+    /* background: linear-gradient(to top, rgba(202, 202, 82, 0), #ad4444); */
     }
 
 /* ----------------BODY-------------------------- */
 
+
+header{
+    margin-top: 13px;
+}
 
 .nav-header{
     display: flex;
@@ -26,7 +34,7 @@ body{
     /* border: 6px solid rgb(167, 231, 169); */
     /* background-color: rgb(56, 83, 83); */
     align-items: center;
-    border: solid 2px black;
+    /* border: solid 2px black; */
 
 }
 
@@ -36,40 +44,60 @@ ul>li>a{
 
     font-family: "Inter", sans-serif;
     /* font-optical-sizing: auto; */
-    font-weight: 480;
+    /* font-weight: 480; */
+    font-weight: 570;
+
     
 }
 
 .ul-ancoras{
     /* background-color: rgb(90, 90, 128); */
-    display: flex;
     /* border: solid 2px gray; */
     /* width: 100%; */
     width: 100%;
     display: flex;
     align-items: center;
     /* justify-content: space-between; */
-    gap: 100px;
+    gap: 80px;
 
 }
 
-.ul-login{
+
+
+.section-login{
     /* background-color: rgb(90, 90, 128); */
     display: flex;
     /* border: solid 2px gray; */
-    /* width: 100%; */
-    width: 200px;
+    width: 214px;
     /* width: 184px; */
     height: 48px;
     display: flex;
     align-items: center;
-    /* justify-content: space-evenly; */
     justify-content: center;
-    gap: 8px;
+    gap: 6px;
     border: solid 1px #BF1501;
     border-radius: 16px;
+    
 }
 
+.section-login>button{
+    background-color: Transparent;
+    border: transparent;
+
+    color: #000000;
+    font-size: 16px;
+
+    font-family: "Inter", sans-serif;
+    /* font-optical-sizing: auto; */
+    font-weight: 570;
+
+}
+
+
+.linha{
+    border: 1.32px solid black;
+    height: 20px;
+}
 
 
 
